連結資料庫

--- a/views/brand.ejs
+++ b/views/brand.ejs
@@ -68,11 +68,11 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">名單更新日期：2022/05/17</span>
-										<h2><a href="#">Leaping Bunny Certification<br />
+										<span class="date">名單更新日期:<%= items[0].updatetime %></span>
+										<h2><a href="leapingbunny">Leaping Bunny Certification<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>關於此分類的說明</p>
 									<ul class="actions special">
 										<li><a href="leapingbunny" class="button">查看名單</a></li>
@@ -80,38 +80,38 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">名單更新日期：2022/05/04</span>
-										<h2><a href="#">Not Tested on Animals Rabbit<br />
+										<span class="date">名單更新日期:<%= items[0].updatetime %></span>
+										<h2><a href="ccf">Not Tested on Animals Rabbit<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="ccf" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>關於此分類的說明</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">查看名單</a></li>
+										<li><a href="ccf" class="button">查看名單</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">名單更新日期：2022/02/20</span>
-										<h2><a href="#">Beauty without Bunnies Program<br />
+										<span class="date">名單更新日期：<%= items[0].updatetime %></span>
+										<h2><a href="peta">Beauty without Bunnies Program<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="peta" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>關於此分類的說明</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">查看名單</a></li>
+										<li><a href="peta" class="button">查看名單</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">名單更新日期：2022/03/15</span>
-										<h2><a href="#">兔兔不哭<br />
+										<span class="date">名單更新日期：<%= items[0].updatetime %></span>
+										<h2><a href="nmcb">兔兔不哭<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="nmcb" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>關於此分類的說明</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">查看名單</a></li>
+										<li><a href="nmcb" class="button">查看名單</a></li>
 									</ul>
 								<!-- </article>
 								<article>
