--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
             <div class="col-lg py-5">
                 <h4>訊息公告</h4>
                 <p class="text-light"></p>
-                <a class="btn btn-outline-light" href="billboard" role="button">了解更多</a>
+                <a class="btn btn-outline-light" href="news" role="button">了解更多</a>
             </div>
         </div>
     </div>
