--- a/views/leapingbunny.ejs
+++ b/views/leapingbunny.ejs
@@ -51,8 +51,8 @@
 						<table>
 							<thead>
 								<tr>
-									<th width="20%">食材編號</th>
-									<th width="35%">食材名稱</th>
+									<th width="20%">品牌編號</th>
+									<th width="35%">品牌名稱</th>
 									<!-- <th width="35%">營養分類</th>
 									<th width="15%">單位熱量</th>
 									<th width="15%">單位克數</th>                -->
