--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
                 </div>
                 <button type="submit" class="btn">  <a href="memberpage"> 登入</a></button> 
             </div>
-            <button type="submit" class="btn">  <a href="register"> 註冊</a></button> 
+            <button type="submit" class="btn">  <a href="http://localhost:8081/EXPanimals/member/addmember"> 註冊</a></button> 
                 
                    
             </form>
