--- a/public/css/newsstyle.css
+++ b/public/css/newsstyle.css
@@ -141,7 +141,7 @@ img{width:100%;}
 .padding-large{padding: 12px 24px;}
 .padding-16{padding-top: 16px;padding-bottom: 16px;}
 .padding-32{padding-top:32px; padding-bottom: 32px;}
-.padding-48{padding-top:48px; padding-bottom::48px;}
+.padding-48{padding-top:48px; padding-bottom: 48px;}
 .right{float: right}
 .button{
   display: inline-block;
