--- a/views/news.ejs
+++ b/views/news.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>News</title>
-  <link rel='stylesheet' href='../public/css/style1.css' />
+  <link rel='stylesheet' href='css/style1.css' />
 
 </head>
 <body>
