--- a/views/news.ejs
+++ b/views/news.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>News</title>
-  <link rel='stylesheet' href='../public/css/style1.css' />
+  <link rel='stylesheet' href='css/style1.css' />
 
 </head>
 <body>
@@ -88,19 +88,19 @@
               </a>
               <ul class="medium" id="dropdown">
                 <li>
-                  <a href="#">暫存1</a>
+                  <a href="#">更多活動</a>
                 </li>
                 <li>
-                  <a href="#">暫存2</a>
+                  <a href="#">最新消息</a>
                 </li>
                 <li>
-                  <a href="#">暫存3</a>
+                  <a href="#">我們的行動</a>
                 </li>
                 <li>
-                  <a href="#">暫存4</a>
+                  <a href="#">響應方式</a>
                 </li>
                 <li>
-                  <a href="#">暫存5</a>
+                  <a href="#">加入我們</a>
                 </li>
               </ul>
             </li>                
@@ -199,7 +199,6 @@
   
     
     
-
           </ul>
         </div>
         <div class="col fourth">
