--- a/views/news.ejs
+++ b/views/news.ejs
@@ -25,54 +25,54 @@
               <a class="text-white button round-medium bold red
                         darkred-hover" 
                  style="float:right; line-height:25px;">
-                暫存按鈕
+                設定
               </a>
             </div>
           </div>
           <ul class="clearfix nav-bar">
             <li>
               <a href="#" id="active" style="padding-left: 0px;">
-                <div class="padding-16">首頁</div>
+                <div class="padding-16">公佈欄</div>
               </a>   
             </li>
             <li>              
               <a href="#">
-                <div class="padding-16">暫存</div>              
+                <div class="padding-16">最新消息</div>              
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">暫存</div>
+                <div class="padding-16">我們的行動</div>
               </a>        
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">暫存</div>
+                <div class="padding-16">響應方式</div>
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">暫存</div>              
+                <div class="padding-16">加入我們</div>              
               </a>     
             </li>
             <li>          
               <a href="#">
-                <div class="padding-16">暫存</div>        
+                <div class="padding-16">志工招募</div>        
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">暫存</div>              
+                <div class="padding-16">經驗傳承</div>              
               </a>   
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">暫存</div>              
+                <div class="padding-16">關於我們</div>              
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">暫存</div>                
+                <div class="padding-16">實驗動物科普</div>                
               </a> 
             </li>
             <li style="float:right">
@@ -137,7 +137,32 @@
       <div id="follow" class="content padding-32 clearfix  medium line">
         <ul class="clearfix">
           <li>
-            <a id="facebook" href="#">
+                    <!--Top post-->
+        <div class="row gallery clearfix">
+          <div class="col two-third">
+            <img src="images/event1.png">
+          </div>
+          <div class="col third padding-48 padding-large">
+            
+            <span class="red bold text-white padding-small small">最新活動</span> 
+            <span class="yellow bold padding-small small">限量名額</span>
+            <span style="padding-left: 10px" class="opacity">
+              <a href="#">TW</a></span>
+            <br/>
+            <p class="xlarge">
+              好好愛牠協會首度舉辦線上動保教育講座，免費報名現在開始喔！
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Footer -->
+    <div id="footer" class="white text-grey">
+      <!--Follow -->
+      <div id="follow" class="content padding-32 clearfix  medium line">
+        <ul class="clearfix">
+          <li>
+          <!--  <a id="facebook" href="#">
               <i class="fa fa-facebook icon" 
                  aria-hidden="true"></i>Facebook
             </a>
@@ -158,7 +183,7 @@
             <a id="instagram" href="#">
               <i class="fa fa-instagram icon" 
                  aria-hidden="true"></i>Instagram
-            </a>
+            </a> -->
           </li>
         </ul>
       </div>
