--- a/views/news.ejs
+++ b/views/news.ejs
@@ -22,9 +22,9 @@
                                        align-items: center;">
             <div style="width:100%">          
               <!-- <img src="img/LOGO(去背景)_工作區域 1 複本 2.png" style="width:120px; vertical-align: middle;"> -->
-              <a class="text-white button round-medium bold red
+              <a href="#" class="text-white button round-medium bold red
                         darkred-hover" 
-                 style="float:right; line-height:25px;">
+                 style="float:right; line-height:25px; ">
                 設定
               </a>
             </div>
@@ -62,17 +62,17 @@
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">經驗傳承</div>              
+                <div class="padding-16">動物友善教育</div>              
               </a>   
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">關於我們</div>              
+                <div class="padding-16">動物資訊傳播</div>              
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">實驗動物科普</div>                
+                <div class="padding-16">動物福利行動</div>                
               </a> 
             </li>
             <li style="float:right">
@@ -140,23 +140,133 @@
                     <!--Top post-->
         <div class="row gallery clearfix">
           <div class="col two-third">
-            <img src="images/event1.png">
+            <img src="images/event2.jpg">
           </div>
           <div class="col third padding-48 padding-large">
             
             <span class="red bold text-white padding-small small">最新活動</span> 
-            <span class="yellow bold padding-small small">限量名額</span>
+            <span class="yellow bold padding-small small">募款活動</span>
             <span style="padding-left: 10px" class="opacity">
               <a href="#">TW</a></span>
             <br/>
             <p class="xlarge">
-              好好愛牠協會首度舉辦線上動保教育講座，免費報名現在開始喔！
+              用行動支持，幫助牠好好生活，為感謝大家支持，捐款滿額送友善動物馬克杯活動開跑！
             </p>
           </div>
         </div>
       </div>
     </div>
     <!--Footer -->
+        <!--Footer -->
+        <div id="footer" class="white text-grey">
+          <!--Follow -->
+          <div id="follow" class="content padding-32 clearfix  medium line">
+            <ul class="clearfix">
+              <li>
+                        <!--Top post-->
+            <div class="row gallery clearfix">
+              <div class="col two-third">
+                <img src="images/event3.png">
+              </div>
+              <div class="col third padding-48 padding-large">
+                
+                <span class="red bold text-white padding-small small">訊息公告</span> 
+                <span class="yellow bold padding-small small">動物實驗</span>
+                <span style="padding-left: 10px" class="opacity">
+                  <a href="#">TW</a></span>
+                <br/>
+                <p class="xlarge">
+                  動物實驗，一個大家並不陌生的詞彙，但你知道每年有多少隻動物被當實驗品嗎？
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--Footer -->
+            <!--Footer -->
+        <!--Footer -->
+        <div id="footer" class="white text-grey">
+          <!--Follow -->
+          <div id="follow" class="content padding-32 clearfix  medium line">
+            <ul class="clearfix">
+              <li>
+                        <!--Top post-->
+            <div class="row gallery clearfix">
+              <div class="col two-third">
+                <img src="images/event4.jpg">
+              </div>
+              <div class="col third padding-48 padding-large">
+                
+                <span class="red bold text-white padding-small small">訊息公告</span> 
+                <span class="yellow bold padding-small small">動物資訊傳播</span>
+                <span style="padding-left: 10px" class="opacity">
+                  <a href="#">TW</a></span>
+                <br/>
+                <p class="xlarge">
+                  法國將禁售貓狗、禁止鯨豚表演，台灣呢？
+                  法國自2026年起全面禁止海豚和虎鯨表演
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--Footer -->
+                <!--Footer -->
+                <div id="footer" class="white text-grey">
+                  <!--Follow -->
+                  <div id="follow" class="content padding-32 clearfix  medium line">
+                    <ul class="clearfix">
+                      <li>
+                                <!--Top post-->
+                    <div class="row gallery clearfix">
+                      <div class="col two-third">
+                        <img src="images/event5.png">
+                      </div>
+                      <div class="col third padding-48 padding-large">
+                        
+                        <span class="red bold text-white padding-small small">動物資訊傳播</span> 
+                        <span class="yellow bold padding-small small">政策</span>
+                        <span style="padding-left: 10px" class="opacity">
+                          <a href="#">TW</a></span>
+                        <br/>
+                        <p class="xlarge">
+                          --可愛不該是牠的原罪--
+                          
+                          美國加州自2019年起加州禁止寵物店販售來自繁殖場的動物，包括狗、貓及兔子等。加州境內的寵物店只能販賣來自公共動物控管中心、動物收容所、動物防虐庇護所、救援組織等非營利機構的動物，這才是真正的落實動物福利！
+
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--Footer -->
+                        <!--Footer -->
+                <!--Footer -->
+                <div id="footer" class="white text-grey">
+                  <!--Follow -->
+                  <div id="follow" class="content padding-32 clearfix  medium line">
+                    <ul class="clearfix">
+                      <li>
+                                <!--Top post-->
+                    <div class="row gallery clearfix">
+                      <div class="col two-third">
+                        <img src="images/event1.png">
+                      </div>
+                      <div class="col third padding-48 padding-large">
+                        
+                        <span class="red bold text-white padding-small small">訊息公告</span> 
+                        <span class="yellow bold padding-small small">動物友善教育</span>
+                        <span style="padding-left: 10px" class="opacity">
+                          <a href="#">TW</a></span>
+                        <br/>
+                        <p class="xlarge">
+                          『疫』同生活的一件好事愛動物」好好愛牠2022動保教育講座
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--Footer -->
     <div id="footer" class="white text-grey">
       <!--Follow -->
       <div id="follow" class="content padding-32 clearfix  medium line">
