--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -11,7 +11,7 @@ shrink-to-fit=no"
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/detail.css" />
-    <title>產品細節</title>
+    <title>領養人登記</title>
   </head>
 
   <body>
@@ -39,7 +39,7 @@ shrink-to-fit=no"
                 <a class="nav-link" href="about">關於我們</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="product">產品介紹</a>
+                <a class="nav-link" href="product">介紹</a>
               </li>
             </ul>
           </div>
@@ -68,7 +68,22 @@ shrink-to-fit=no"
             資訊：<span class="badge bg-danger me-2">母</span
             ><span class="badge bg-warning me-2">紐西蘭大白兔</span>
           </p>
-          <form class="row align-items-end">
+
+ <!----<h1>邦妮幫你Bunny</h1>---->
+ <p></p>
+ <h1> <span class="badge bg-secondary">實驗動物領養人登記</span></h1>
+ *信箱: <input type="text" name="email"><p></p>
+   *真實姓名: <input type="text" name="name"><p>
+*職業: <input type="text" name="job"><p>
+*電話: <input type="text" name="phone"><p>
+*地址: <input type="text" name="address"><p></p>
+
+
+<input type="button" value="確認登記" onclick="check()"> 
+</form>
+
+
+      <!--   <form class="row align-items-end">
             <div class="col-9">
               <label for="inlineFormInputNum">聯絡資訊(手機與姓名)：</label>
               <div class="input-group">
@@ -77,7 +92,7 @@ shrink-to-fit=no"
             </div>
             <div class="col-3">
               <button type="submit" class="btn btn-primary">送出</button>
-            </div>
+            </div>--> 
           </form>
         </div>
       </div>
