--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,56 +5,121 @@
     <script src="/routes/newregister.js"> </script>
 </head>
 
-<div class="hero">
-    <div class="form-box">
-      <div class="button-box">
-        <div id="btn"></div>
-     <!--   <button type="button" class="toggle-btn" onclick=login()>Log In</button>
-        <button type="button" class="toggle-btn" onclick="register()">Register</button>-->
-      </div>
-    <!--  <div class="social-icons">
-       <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/rmj1tdKw/fb.png" alt="fb"/></a>
-       <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/L57ZzjR2/tw.png" alt="tw"/></a>
-      <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/kG5xNnbF/gp.png" alt="gp"/></a>
-      </div> -->
-      <!--<form id="login" class="form-group">
-        <input type="text" class="input-field" placeholder="信箱" required/>
-        <input type="text" class="input-field" placeholder="密碼" required/> -->
-        <div class="col-lg-6 text-center">
-            <!----<h1>邦妮幫你Bunny</h1>---->
-             <p>Bunny幫你註冊系統</p>
-        <form action="../member/memberprofile" method="post" name="form">
-          <form action="/somewhere/to/upload" enctype="multipart/form-data">
-            <input name="profile" type="file" accept="image/gif, image/jpeg, image/png">
-            </form>
-          *信箱: <input type="text" name="email"><p></p>
-          *密碼: <input type="text" name="Password"><p>
-            *姓名: <input type="text" name="name"><p></p>
-            *生日: <input type="date" name="name"><p>
-  *行動電話: <input type="text" name="phone"><p>
-  *性別:<select name="gender">
-    <option value="male">男生</option>
-    <option value="female">女生</option>
-   </select><p>
-  
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+shrink-to-fit=no"
+    />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/detail.css" />
+    <title>Bunny幫你會員註冊系統</title>
+  </head>
 
-    *是否願意登記成為實驗動物領養人?<select name="will">   <option value="yes">願意</option>
-        <option value="no">不願意</option>
-        <option value="notyet">尚未決定</option></select>
-        <p></p>
-  <input type="button" value="確認註冊" onclick="check()"> 
- </form>
-       <!-- <input type="checkbox" class="check-box"/><span>Remmber Password</span> -->
-    <!--  <button type="submit" class="submmit-btn">註冊</button> -->
-      <!-- </form> 
-      <form id="register" class="form-group">
-        <input type="text" class="input-field" placeholder="User ID" required/>
-        <input type="email" class="input-field" placeholder="Email" required/>
-        <input type="text" class="input-field" placeholder="Enter Password" required/>
-        <input type="checkbox" class="check-box"/><span>I agree to the termes &amp; conditions</span>
-        <button type="submit" class="submmit-btn">Register</button>
-      </form>
-    </div>-->
-  
-  </div> 
-  
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="/">邦妮幫你 ． Bunny</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/">首頁</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about">關於我們</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="product">介紹</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div id="banner"></div>
+    <div class="container my-3">
+      <div class="row g-0">
+        <h3 class="title my-3">| Bunny幫你<small></small></h3>
+      </div>
+      <div class="row">
+        <div class="col-lg mb-3">
+          <img src="images/Joinus.jpg" class="img-thumbnail" />
+        </div>
+         <div class="col-lg mb-3">
+          <h3></h3>
+       <!--   <p>
+            
+          </p>
+          <p>
+            
+            </p>
+          <p>
+            資訊：<span class="badge bg-danger me-2">母</span
+            ><span class="badge bg-warning me-2">紐西蘭大白兔</span>
+          </p> -->
+
+ <!----<h1>邦妮幫你Bunny</h1>---->
+ <p></p>
+ <h1> <span class="badge bg-secondary">註冊系統</span></h1>
+ <form action="../member/memberprofile" method="post" name="form">
+  <form action="/somewhere/to/upload" enctype="multipart/form-data">
+    <input name="profile" type="file" accept="image/gif, image/jpeg, image/png">
+    </form>
+ *信箱: <input type="text" name="email"><p></p>
+ *密碼: <input type="text" name="password"><p></p>
+*姓名: <input type="text" name="name"><p>
+    *電話: <input type="text" name="phone"><p>
+      *生日: <input type="date" name="address"><p></p>
+      *性別:<select name="gender">
+        <option value="male">男生</option>
+        <option value="female">女生</option>
+       </select><p>
+        *是否願意登記成為實驗動物領養人?<select name="will">   <option value="yes">願意</option>
+            <option value="no">不願意</option>
+            <option value="notyet">尚未決定</option></select>
+            <p></p>
+
+
+<input type="button" value="確認登記" onclick="check()"> 
+</form>
+
+
+      <!--   <form class="row align-items-end">
+            <div class="col-9">
+              <label for="inlineFormInputNum">聯絡資訊(手機與姓名)：</label>
+              <div class="input-group">
+                <input type="text" class="form-control" id="inlineFormInputNum">
+              </div>
+            </div>
+            <div class="col-3">
+              <button type="submit" class="btn btn-primary">送出</button>
+            </div>--> 
+          </form>
+        </div>
+      </div>
+    </div>
+    <footer class="text-center bg-dark text-white py-2">
+      歡迎加入Bunny幫你
+    </footer> 
+    <!-- Optional JavaScript -->
+    <script src="js/bootstrap.js"></script>
+  </body>
+</html>
+<!-- row-cols-lg-auto -->
