--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -56,7 +56,7 @@ shrink-to-fit=no"
           <img src="images/rabbit-adoption.jpg" class="img-thumbnail" />
         </div>
         <div class="col-lg mb-3">
-          <h3>紐西蘭大白兔-小芳與小美</h3>
+          <h3>以認養代替購買</h3>
           <p>
             動物會知道你對牠的好，只要你願意做出對牠更好的選擇。
           </p>
@@ -65,13 +65,13 @@ shrink-to-fit=no"
             
             進行動物科學應用之機構，應設置實驗動物照護及使用委員會或小組，以督導該機構進行實驗動物之科學應用。</p>
           <p>
-            資訊：<span class="badge bg-danger me-2">母</span
-            ><span class="badge bg-warning me-2">紐西蘭大白兔</span>
+            資訊：<span class="badge bg-danger me-2">實驗動物認養</span
+            ><span class="badge bg-warning me-2"></span>
           </p>
 
  <!----<h1>邦妮幫你Bunny</h1>---->
  <p></p>
- <h1> <span class="badge bg-secondary">實驗動物領養人登記</span></h1>
+ <h1> <span class="badge bg-secondary">實驗動物領養人登記申請</span></h1>
  *信箱: <input type="text" name="email"><p></p>
    *真實姓名: <input type="text" name="name"><p>
 *職業: <input type="text" name="job"><p>
