--- a/views/news.ejs
+++ b/views/news.ejs
@@ -25,7 +25,7 @@
               <a href="#" class="text-white button round-medium bold red
                         darkred-hover" 
                  style="float:right; line-height:25px; ">
-                設定
+                回首頁
               </a>
             </div>
           </div>
