--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,7 +25,7 @@ shrink-to-fit=no"
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="/">邦妮幫你 ． Bunny</a>
+          <a class="navbar-brand" href="/">Bunny幫你</a>
           <button
             class="navbar-toggler"
             type="button"
