--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -49,7 +49,7 @@ shrink-to-fit=no"
     <div id="banner"></div>
     <div class="container my-3">
       <div class="row g-0">
-        <h3 class="title my-3">| 實驗動物資訊<small>Detail</small></h3>
+        <h3 class="title my-3">| 實驗動物 |<small></small></h3>
       </div>
       <div class="row">
         <div class="col-lg mb-3">
