--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -69,19 +69,35 @@ shrink-to-fit=no"
             ><span class="badge bg-warning me-2"></span>
           </p>
 
- <!----<h1>邦妮幫你Bunny</h1>---->
+ <!----<h1>Bunny幫你</h1>---->
  <p></p>
  <h1> <span class="badge bg-secondary">實驗動物領養人登記申請</span></h1>
- *信箱: <input type="text" name="email"><p></p>
-   *真實姓名: <input type="text" name="name"><p>
-*職業: <input type="text" name="job"><p>
-*電話: <input type="text" name="phone"><p>
-*地址: <input type="text" name="address"><p></p>
+ <form>
 
+  <p>真實姓名:</p>
+  <p><input type="text" name="name" required></p>
 
-<input type="button" value="確認登記" onclick="check()"> 
+  <p>信箱:</p>
+  <p><input name="species" type="text" name="email" required></p>
+
+  <p>備註事項: </p>
+  <p><textarea name="comments" rows="5" cols="20"></textarea></p>
+
+</select><p>
+  有無動物飼養經驗?  <select name="will">   <option value="yes">有</option>
+      <option value="no">無</option>
+      </select>
+      <p></p>
+
+    </select><p>
+      可面訪時間?  <select name="visit">   <option value="Option1">平日</option>
+          <option value="Option2">假日</option>
+          <option value="Option3">平日與假日皆可</option></select>
+          <p></p>
+
+  <p><input type="submit" value="送出登記資料"></p>
+
 </form>
-
 
       <!--   <form class="row align-items-end">
             <div class="col-9">
@@ -105,3 +121,4 @@ shrink-to-fit=no"
   </body>
 </html>
 <!-- row-cols-lg-auto -->
+
