--- a/views/about.ejs
+++ b/views/about.ejs
@@ -68,7 +68,7 @@
         </div>
     </div>
     <footer class="text-center bg-dark text-white py-2">
-        © 2022 All Rights Reserved.
+      Copyrights © 2022 All Rights Reserved by Bunny幫你
     </footer>
     <!-- Optional JavaScript -->
     <script src="js/bootstrap.js"></script>
