--- a/views/news.ejs
+++ b/views/news.ejs
@@ -22,13 +22,13 @@
                                        align-items: center;">
             <div style="width:100%">          
               <!-- <img src="img/LOGO(去背景)_工作區域 1 複本 2.png" style="width:120px; vertical-align: middle;"> -->
-              <a href="#" class="text-white button round-medium bold red
+         <!--      <a href="/" class="text-white button round-medium bold red
                         darkred-hover" 
                  style="float:right; line-height:25px; ">
                 回首頁
               </a>
             </div>
-          </div>
+          </div> -->
           <ul class="clearfix nav-bar">
             <li>
               <a href="#" id="active" style="padding-left: 0px;">
@@ -37,42 +37,42 @@
             </li>
             <li>              
               <a href="#">
-                <div class="padding-16">最新消息</div>              
+                <div class="padding-16"></div>              
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">我們的行動</div>
+                <div class="padding-16"></div>
               </a>        
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">響應方式</div>
+                <div class="padding-16"></div>
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">加入我們</div>              
+                <div class="padding-16"></div>               
               </a>     
             </li>
             <li>          
               <a href="#">
-                <div class="padding-16">志工招募</div>        
+                <div class="padding-16"></div>        
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">動物友善教育</div>              
+                <div class="padding-16"></div>              
               </a>   
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">動物資訊傳播</div>              
+                <div class="padding-16"></div>              
               </a>
             </li>
             <li>
               <a href="#">
-                <div class="padding-16">動物福利行動</div>                
+                <div class="padding-16"></div>               
               </a> 
             </li>
             <li style="float:right">
@@ -82,31 +82,20 @@
                   <i class="fa fa-angle-down" aria-hidden="true"></i>
                 </div>
                 <div id="up" class="padding-16" style="display: none;">
-                  更多
+                  
                   <i class="fa fa-angle-up" aria-hidden="true"></i>
                 </div>
               </a>
               <ul class="medium" id="dropdown">
                 <li>
-                  <a href="#">更多活動</a>
+                  <a href="/">回首頁</a>
                 </li>
-                <li>
-                  <a href="#">最新消息</a>
-                </li>
-                <li>
-                  <a href="#">我們的行動</a>
-                </li>
-                <li>
-                  <a href="#">響應方式</a>
-                </li>
-                <li>
-                  <a href="#">加入我們</a>
-                </li>
+
               </ul>
             </li>                
           </ul>
         </div>
-      </div>
+      </div> 
     <!--Body -->
     <div id="body" class="content padding-32">
       <!--Top Stories-->
