--- a/views/register.ejs
+++ b/views/register.ejs
@@ -118,7 +118,7 @@ shrink-to-fit=no"
       </div>
     </div>
     <footer class="text-center bg-dark text-white py-2">
-      歡迎加入Bunny幫你
+      Copyrights © 2022 All Rights Reserved by Bunny幫你
     </footer> 
     <!-- Optional JavaScript -->
     <script src="js/bootstrap.js"></script>
