--- a/views/product.ejs
+++ b/views/product.ejs
@@ -93,12 +93,12 @@
                             image cap"
             />
             <div class="card-body">
-              <h5 class="card-title text-danger">限量莓果乳酪蛋糕</h5>
+              <h5 class="card-title text-danger">test</h5>
               <p class="card-text">
-                自製微酸香甜的草莓醬點綴了藍莓，雙層華麗的享受與令人驚豔的口感絕對讓你幸福美滿。
+                test
               </p>
               <a href="detail.html" class="btn btn-outline-primary float-end"
-                >我要訂購</a
+                >test</a
               >
             </div>
             --->
@@ -107,7 +107,7 @@
       </div>
     </div>
     <footer class="text-center bg-dark text-white py-2">
-      © 2022 All Rights Reserved.
+      Copyrights © 2022 All Rights Reserved by Bunny幫你
     </footer>
     <!-- Optional JavaScript -->
     <script src="js/bootstrap.js"></script>
