--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -80,6 +80,12 @@ shrink-to-fit=no"
   <p>信箱:</p>
   <p><input name="species" type="text" name="email" required></p>
 
+  <p>職業:</p>
+  <p><input name="species" type="text" name="job" required></p>
+
+  <p>地址:</p>
+  <p><input name="species" type="text" name="address" required></p>
+
   <p>備註事項: </p>
   <p><textarea name="comments" rows="5" cols="20"></textarea></p>
 
