--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,19 +14,19 @@
         
         </header>
         <div id="content">
-            <form>
+            <form action="memberlogin" method="post">
                 <div class="form-group">
-                    <input class="form-control" placeholder="E-mail" name="email" type="email">
+                    <input class="form-control" placeholder="E-mail" name="m_email" type="text">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" placeholder="Password" name="password" type="password">
+                    <input class="form-control" placeholder="Password" name="m_password" type="text">
                 </div>
                 <div class="checkbox">
                     <label>
                         <input name="remember" type="checkbox">記住我
                     </label>
                 </div>
-                <button type="submit" class="btn">  <a href="memberpage"> 登入</a></button> 
+                <div><input type="submit" class="btn" value="登入"></div>
             </div>
             <button type="submit" class="btn">  <a href="register"> 註冊</a></button> 
                 
