--- a/views/unAuth.ejs
+++ b/views/unAuth.ejs
@@ -36,51 +36,16 @@
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
                <!----<h1>邦妮幫你Bunny</h1>---->
-                <p>牠，也有感受。</p>
+			    <h2>尚未登入, 無使用權利!</h2>
                   <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
             </div>
         </div>
     </div>
-    <div id="content" class="container-fluid">
-        <div class="row text-center">
-            <div class="col-lg py-5">
-                <h4>會員登入</h4>
-                <p class="text-light">Bunny幫你</p>
-                <a class="btn btn-outline-light" href="login" role="button">登入系統</a>
-             </div>
-            <div class="col-lg py-5">
-                <h4>零殘忍掃描功能</h4>
-                <p class="text-light">智能辨識品牌</p>
-                <a class="btn btn-outline-light" href="recognition" role="button">開啟手機鏡頭</a>
-            </div> 
-            <div class="w-100"></div>
-            <div class="col-lg py-5">
-                <h4>實驗動物認養</h4>
-                <p class="text-light">領養代替購買!</p>
-                <a class="btn btn-outline-light" href="detail" role="button">我要領養</a>
-            </div>
-            <div class="col-lg py-5">
-                <h4>訊息公告</h4>
-                <p class="text-light"></p>
-                <a class="btn btn-outline-light" href="news" role="button">了解更多</a>
-            </div>
-        </div>
-    </div>
-    <!--///// -->
-    <div id="content" class="container-fluid">
-        <div class="row text-center">
-            <div class="col-lg py-5">
-                <h4>動物友善店家</h4>
-                <p class="text-light">邦妮幫你精選品牌</p>
-                <a class="btn btn-outline-light" href="brand" role="button">查看名單</a>
-            </div>
-      
-        </div>
-    </div>
-    <!--///// -->
+    <div id="content" class="container-fluid"></div>
+
     <footer class="text-center bg-dark text-white py-2">
-      Copyrights © 2022 All Rights Reserved by Bunny幫你
-    </footer>
+		Copyrights © 2022 All Rights Reserved by Bunny幫你
+	  </footer>
     <!-- Optional JavaScript -->
     <script src="js/bootstrap.js"></script>
 
