--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -33,7 +33,7 @@
                                 <img src="img/profile.jpg" alt="陳筱君">
                             </div>
                             <div class="profile-content">
-                                <h3 class="profile-title">000</h3>
+                                <h3 class="profile-title"><%= item.m_nickname %></h3>
                                 <p class="profile-description">已登記成為實驗動物領養等待名單</p>
                             </div>
                         </div>
