--- a/views/register.ejs
+++ b/views/register.ejs
@@ -88,7 +88,7 @@ shrink-to-fit=no"
     <p></p>
     *密碼: <input type="text" name="m_password" required>
     <p></p>
-    電話: <input type="number" name="m_phone">
+    電話: <input type="text" name="m_phone">
     <p></p>
     生日: <input type="date" name="m_birth">
     <p></p>
