會員登入頁面跳轉

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
             <div class="col-lg py-5">
                 <h4>會員登入</h4>
                 <p class="text-light">Bunny幫你</p>
-                <a class="btn btn-outline-light" href="login" role="button">登入系統</a>
+                <a class="btn btn-outline-light" href="memberpage" role="button">登入系統</a>
              </div>
             <div class="col-lg py-5">
                 <h4>零殘忍掃描功能</h4>
