領養登記(寫入現在時間)

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -74,8 +74,8 @@ shrink-to-fit=no"
  <h1> <span class="badge bg-secondary">實驗動物領養人登記申請</span></h1>
  <form action = "/detailadd" method="post">
 
-  <p>time:</p>
-  <p><input type="date" name="a_filltime" required></p>
+  <!---<p>time:</p>
+  <p><input type="date" name="a_filltime" required></p>---->
 
   <p>真實姓名:</p>
   <p><input type="text" name="a_realname" required></p>
