領養登記(抓取m_email為readonly,未傳回)

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -81,7 +81,7 @@ shrink-to-fit=no"
   <p><input type="text" name="a_realname" required></p>
 
   <p>信箱:</p>
-  <p><input type="text" name="m_email" required></p>
+  <p><input type="text" name="m_email" value= <%= item.m_email %> readonly></p>
 
   <p>職業:</p>
   <p><input type="text" name="a_job" required></p>
