--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -57,7 +57,7 @@
                 <div class="profile-image">
                     <img src="img/profile.jpg" alt="陳筱君">
                 </div>
-                <h3 class="profile-title">000</h3>
+                <h3 class="profile-title"><%= item.m_nickname %></h3>
                 <p class="profile-description">已登記成為實驗動物領養等待名單</p>
             </div> <!-- top-section -->
             <div class="main-navigation">
