--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -106,7 +106,26 @@
                             <div class="col-md-12">
                                 <h4 class="widget-title">會員資料</h4>
                                 <div class="about-image">
-                                    <img src="img/會員資訊-初版.jpg" alt="about me">
+                                    <img src="img/" alt="">
+
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="暱稱">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="信箱">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="電話">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="性別">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="生日">
+                                    </div>
+
                               <!--  </div>
                                 <p> <span class="blue">template</span><span class="green">mo</span>. You can use this template for any purpose. Please tell your friends about it. Thank you. Credit goes to <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> for images used in this design. You can <strong>change menu icons</strong> by checking <a rel="nofollow" href="http://fontawesome.info/font-awesome-icon-world-map/" target="_parent">Font Awesome</a> (version 4). Example: <strong>&lt;i class=&quot;fa fa-camera&quot;&gt;&lt;/i&gt;</strong></p>
                                 <hr> -->
