--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -421,9 +421,9 @@ h3.profile-title {
 -------------------------------------------------------- */
 /*------ banner ------ */
 .banner-bg {
-  padding: 260px 80px;
+  /*padding: 260px 80px;*/
   position: relative;
-  background: url("../img/領養資訊.jpg");
+  background: url("../");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
