--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -125,6 +125,10 @@
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="生日">
                                     </div>
+                                  
+                                    <a href="detail.ejs">
+                                        <button>登記成為實驗動物領養人</button>
+                                        </a> 
 
                               <!--  </div>
                                 <p> <span class="blue">template</span><span class="green">mo</span>. You can use this template for any purpose. Please tell your friends about it. Thank you. Credit goes to <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> for images used in this design. You can <strong>change menu icons</strong> by checking <a rel="nofollow" href="http://fontawesome.info/font-awesome-icon-world-map/" target="_parent">Font Awesome</a> (version 4). Example: <strong>&lt;i class=&quot;fa fa-camera&quot;&gt;&lt;/i&gt;</strong></p>
