--- a/views/addSuccess.ejs
+++ b/views/addSuccess.ejs
@@ -36,7 +36,7 @@
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
                <!----<h1>邦妮幫你Bunny</h1>---->
-			    <h2>新增成功</h2>
+			    <h2>Bunny幫你會員註冊成功</h2>
                   <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
             </div>
         </div>
