--- a/views/unAuth.ejs
+++ b/views/unAuth.ejs
@@ -36,8 +36,16 @@
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
                <!----<h1>邦妮幫你Bunny</h1>---->
-			    <h2>尚未登入, 無使用權利!</h2>
+			    <h2>尚未登入, 無法使用此功能!</h2>
                   <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
+                  <h5>點擊「登入會員按鈕」進入登入頁面。</h5>
+                  <input type="button" onclick="location.href='';" value="登入會員按鈕" />
+                  <br> 
+                  <br> 
+                  <h5>要登記為實驗動物領養人，請先註冊會員(免費)。</h5>
+                  <h5>點擊「註冊會員按鈕」後開始進行註冊。</h5>
+                  <input type="button" onclick="location.href='';" value="註冊會員按鈕" />
+
             </div>
         </div>
     </div>
