--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -124,7 +124,7 @@
                                         <input type="text" class="form-control" placeholder="生日">
                                     </div>
                                   
-                                    <a href="detail.ejs">
+                                    <a href="detail">
                                         <button>登記成為實驗動物領養人</button>
                                         </a> 
 
