--- a/views/unAuth.ejs
+++ b/views/unAuth.ejs
@@ -39,12 +39,12 @@
 			    <h2>尚未登入, 無法使用此功能!</h2>
                   <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
                   <h5>點擊「登入會員按鈕」進入登入頁面。</h5>
-                  <input type="button" onclick="location.href='';" value="登入會員按鈕" />
+                  <input type="button" onclick="location.href='login'" value="登入會員按鈕" />
                   <br> 
                   <br> 
                   <h5>要登記為實驗動物領養人，請先註冊會員(免費)。</h5>
                   <h5>點擊「註冊會員按鈕」後開始進行註冊。</h5>
-                  <input type="button" onclick="location.href='';" value="註冊會員按鈕" />
+                  <input type="button" onclick="location.href='register'" value="註冊會員按鈕" />
 
             </div>
         </div>
