--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -63,7 +63,7 @@
                     <li><a href=""><i class="fa fa-pencil"></i>編輯會員</a></li>
                     <li><a href="#projects"><i class="fa fa-bookmark"></i>我的收藏</a></li>
                     <li><a href="#contact"><i class="fa fa-wrench"></i>問題回報</a></li>
-                    <li><a href=""><i class="fa fa-sign-out"></i>登出</a></li>
+                    <li><a href="logout"><i class="fa fa-sign-out"></i>登出</a></li>
                 </ul>
             </div> <!-- .main-navigation -->
           <!--  <div class="social-icons">
@@ -109,19 +109,19 @@
                                 </div>
                                 <div class="col-xl-4">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="暱稱">
+                                        <h3>暱稱： <%= item.m_nickname %></h3>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="信箱">
+                                        <h3>信箱： <%= item.m_email %></h3>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="電話">
+                                        <h3>電話： <%= item.m_phone %></h3>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="性別">
+                                        <h3>性別： <%= item.m_sex %></h3>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="生日">
+                                        <h3>生日： <%= item.m_birth %></h3>
                                     </div>
                                   
                                     <a href="detail">
